Removed deprecated constructor